Add response models
