# contracts/responses/auth_response.go
@@ -1,0 +1,10 @@
+package responses
+
+// swagger:response AuthResponse
+type AuthResponse struct {
+	// in: body
+	Data struct {
+		Token string
+		RefreshToken string
+	}
+}
